ass1/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /home/sang/Desktop/PPL/ass-ppl/ass1/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'&&'", "'||'", "'!'", 
                     "'+'", "'-'", "'*'", "'%'", "'\\'", "'<='", "'>='", 
                     "'!='", "'=='", "'<'", "'>'", "'+.'", "'-.'", "'*.'", 
                     "'\\.'", "'<=.'", "'>=.'", "'=/='", "'<.'", "'>.'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "':'", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Body'", "'Else'", "'EndFor'", "'If'", "'Var'", "'EndDo'", 
                     "'Break'", "'ElseIf'", "'EndWhile'", "'Parameter'", 
                     "'While'", "'Continue'", "'EndBody'", "'For'", "'Return'", 
                     "'Do'", "'EndIf'", "'Function'", "'Then'", "'True'", 
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "HEXA", "OCTA", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "ASSIGN", "AND", "OR", "NOT", "ADD", 
                      "SUB", "MUL", "MODULE", "DIV", "LTE", "GTE", "NEQ", 
                      "EQ", "LT", "GT", "ADDF", "SUBF", "MULF", "DIVF", 
                      "LTEF", "GTEF", "EQF", "LTF", "GTF", "LP", "RP", "LCB", 
                      "RCB", "LSB", "RSB", "SEMI", "COMMA", "COLON", "DOT", 
                      "WS", "BLOCK_COMMENT", "ID", "BODY", "ELSE", "ENDFOR", 
                      "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", 
                      "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", "FOR", 
                      "RETURN", "DO", "ENDIF", "FUNCTION", "THEN", "TRUE", 
                      "FALSE", "ERROR_TOKEN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_funcDecl = 1
    RULE_varDecl = 2
    RULE_varDeclaration = 3
    RULE_indexInt = 4
    RULE_literals = 5
    RULE_intLiteral = 6
    RULE_booleanLiteral = 7
    RULE_arrayLiteral = 8
    RULE_exp = 9
    RULE_exp1 = 10
    RULE_exp2 = 11
    RULE_exp3 = 12
    RULE_exp4 = 13
    RULE_exp5 = 14
    RULE_exp6 = 15
    RULE_exp7 = 16
    RULE_exp8 = 17
    RULE_indexes = 18
    RULE_callExpr = 19
    RULE_listExp = 20
    RULE_stmt = 21
    RULE_stmtInFunc = 22
    RULE_assignStmt = 23
    RULE_ifStmt = 24
    RULE_ifComponent = 25
    RULE_forStmt = 26
    RULE_whileStmt = 27
    RULE_dowhileStmt = 28
    RULE_breakStmt = 29
    RULE_continueStmt = 30
    RULE_callStmt = 31
    RULE_returnStmt = 32

    ruleNames =  [ "program", "funcDecl", "varDecl", "varDeclaration", "indexInt", 
                   "literals", "intLiteral", "booleanLiteral", "arrayLiteral", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "indexes", "callExpr", "listExp", "stmt", 
                   "stmtInFunc", "assignStmt", "ifStmt", "ifComponent", 
                   "forStmt", "whileStmt", "dowhileStmt", "breakStmt", "continueStmt", 
                   "callStmt", "returnStmt" ]

    EOF = Token.EOF
    INTLIT=1
    HEXA=2
    OCTA=3
    FLOAT_LITERAL=4
    STRING_LITERAL=5
    ASSIGN=6
    AND=7
    OR=8
    NOT=9
    ADD=10
    SUB=11
    MUL=12
    MODULE=13
    DIV=14
    LTE=15
    GTE=16
    NEQ=17
    EQ=18
    LT=19
    GT=20
    ADDF=21
    SUBF=22
    MULF=23
    DIVF=24
    LTEF=25
    GTEF=26
    EQF=27
    LTF=28
    GTF=29
    LP=30
    RP=31
    LCB=32
    RCB=33
    LSB=34
    RSB=35
    SEMI=36
    COMMA=37
    COLON=38
    DOT=39
    WS=40
    BLOCK_COMMENT=41
    ID=42
    BODY=43
    ELSE=44
    ENDFOR=45
    IF=46
    VAR=47
    ENDDO=48
    BREAK=49
    ELSEIF=50
    ENDWHILE=51
    PARAMETER=52
    WHILE=53
    CONTINUE=54
    ENDBODY=55
    FOR=56
    RETURN=57
    DO=58
    ENDIF=59
    FUNCTION=60
    THEN=61
    TRUE=62
    FALSE=63
    ERROR_TOKEN=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66
    UNTERMINATED_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 66
                self.varDecl()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 72
                self.funcDecl()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def stmtInFunc(self):
            return self.getTypedRuleContext(BKITParser.StmtInFuncContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_funcDecl




    def funcDecl(self):

        localctx = BKITParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(BKITParser.FUNCTION)
            self.state = 81
            self.match(BKITParser.COLON)
            self.state = 82
            self.match(BKITParser.ID)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 83
                self.match(BKITParser.PARAMETER)
                self.state = 84
                self.match(BKITParser.COLON)
                self.state = 85
                self.varDeclaration()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 86
                    self.match(BKITParser.COMMA)
                    self.state = 87
                    self.varDeclaration()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 95
            self.match(BKITParser.BODY)
            self.state = 96
            self.match(BKITParser.COLON)
            self.state = 97
            self.stmtInFunc()
            self.state = 98
            self.match(BKITParser.ENDBODY)
            self.state = 99
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclarationContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varDecl




    def varDecl(self):

        localctx = BKITParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BKITParser.VAR)
            self.state = 102
            self.match(BKITParser.COLON)
            self.state = 103
            self.varDeclaration()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 104
                self.match(BKITParser.COMMA)
                self.state = 105
                self.varDeclaration()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def indexInt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.IndexIntContext)
            else:
                return self.getTypedRuleContext(BKITParser.IndexIntContext,i)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literals(self):
            return self.getTypedRuleContext(BKITParser.LiteralsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varDeclaration




    def varDeclaration(self):

        localctx = BKITParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(BKITParser.ID)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 114
                self.indexInt()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 120
                self.match(BKITParser.ASSIGN)
                self.state = 121
                self.literals()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexIntContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def intLiteral(self):
            return self.getTypedRuleContext(BKITParser.IntLiteralContext,0)


        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_indexInt




    def indexInt(self):

        localctx = BKITParser.IndexIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_indexInt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BKITParser.LSB)
            self.state = 125
            self.intLiteral()
            self.state = 126
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intLiteral(self):
            return self.getTypedRuleContext(BKITParser.IntLiteralContext,0)


        def FLOAT_LITERAL(self):
            return self.getToken(BKITParser.FLOAT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(BKITParser.STRING_LITERAL, 0)

        def booleanLiteral(self):
            return self.getTypedRuleContext(BKITParser.BooleanLiteralContext,0)


        def arrayLiteral(self):
            return self.getTypedRuleContext(BKITParser.ArrayLiteralContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_literals




    def literals(self):

        localctx = BKITParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_literals)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT, BKITParser.HEXA, BKITParser.OCTA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.intLiteral()
                pass
            elif token in [BKITParser.FLOAT_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(BKITParser.FLOAT_LITERAL)
                pass
            elif token in [BKITParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(BKITParser.STRING_LITERAL)
                pass
            elif token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.booleanLiteral()
                pass
            elif token in [BKITParser.LCB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.arrayLiteral()
                pass
            elif token in [BKITParser.ID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.match(BKITParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def HEXA(self):
            return self.getToken(BKITParser.HEXA, 0)

        def OCTA(self):
            return self.getToken(BKITParser.OCTA, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_intLiteral




    def intLiteral(self):

        localctx = BKITParser.IntLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_intLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INTLIT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTA))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_booleanLiteral




    def booleanLiteral(self):

        localctx = BKITParser.BooleanLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_booleanLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(_la==BKITParser.TRUE or _la==BKITParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def literals(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralsContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_arrayLiteral




    def arrayLiteral(self):

        localctx = BKITParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKITParser.LCB)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INTLIT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTA) | (1 << BKITParser.FLOAT_LITERAL) | (1 << BKITParser.STRING_LITERAL) | (1 << BKITParser.LCB) | (1 << BKITParser.ID) | (1 << BKITParser.TRUE) | (1 << BKITParser.FALSE))) != 0):
                self.state = 141
                self.literals()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 142
                    self.match(BKITParser.COMMA)
                    self.state = 143
                    self.literals()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 151
            self.match(BKITParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp1Context,i)


        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def NEQ(self):
            return self.getToken(BKITParser.NEQ, 0)

        def GT(self):
            return self.getToken(BKITParser.GT, 0)

        def LT(self):
            return self.getToken(BKITParser.LT, 0)

        def GTE(self):
            return self.getToken(BKITParser.GTE, 0)

        def LTE(self):
            return self.getToken(BKITParser.LTE, 0)

        def EQF(self):
            return self.getToken(BKITParser.EQF, 0)

        def GTF(self):
            return self.getToken(BKITParser.GTF, 0)

        def LTF(self):
            return self.getToken(BKITParser.LTF, 0)

        def GTEF(self):
            return self.getToken(BKITParser.GTEF, 0)

        def LTEF(self):
            return self.getToken(BKITParser.LTEF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp




    def exp(self):

        localctx = BKITParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.exp1(0)
                self.state = 154
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.LTE) | (1 << BKITParser.GTE) | (1 << BKITParser.NEQ) | (1 << BKITParser.EQ) | (1 << BKITParser.LT) | (1 << BKITParser.GT) | (1 << BKITParser.LTEF) | (1 << BKITParser.GTEF) | (1 << BKITParser.EQF) | (1 << BKITParser.LTF) | (1 << BKITParser.GTF))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 155
                self.exp1(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.exp1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(BKITParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def AND(self):
            return self.getToken(BKITParser.AND, 0)

        def OR(self):
            return self.getToken(BKITParser.OR, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp1



    def exp1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Exp1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp1, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.exp2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Exp1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                    self.state = 163
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 164
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.AND or _la==BKITParser.OR):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 165
                    self.exp2(0) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(BKITParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(BKITParser.Exp2Context,0)


        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def SUB(self):
            return self.getToken(BKITParser.SUB, 0)

        def ADDF(self):
            return self.getToken(BKITParser.ADDF, 0)

        def SUBF(self):
            return self.getToken(BKITParser.SUBF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp2


